[project]
name = "ai-vacation-planner-backend"
version = "0.1.0"
description = "FastAPI and LangGraph backend for an AI vacation planning agent."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "langgraph>=0.2.0",
  "langsmith>=0.1.0",
  "qdrant-client>=1.11.0",
  "sqlalchemy[asyncio]>=2.0.0",
  "psycopg[binary]>=3.2.0",
  "opentelemetry-api>=1.26.0",
  "opentelemetry-sdk>=1.26.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.23.0",
  "httpx>=0.27.0",
  "ruff>=0.6.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
addopts = "-p no:cacheprovider"
norecursedirs = [".pytest_cache", "pytest-cache-files-*", "__pycache__"]

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["migrations*", "tests*"]

[tool.ruff]
line-length = 120
target-version = "py311"
